# COVID-Dashboard-Python-Analytics-Pandas-Visualization-PDF-Generator-FR-

./: README.md
.spyproject/config/backups/: workspace.ini.bak
COVID-19-Dashboard/: .env.example  .gitignore  AUDIT_RAPPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_INSTRUCTIONS.md  EXECUTION_REPORT.md  INSTALLATION_DASHBOARD.md  LICENSE  MIGRATION_GUIDE.md  PHASE_0_VALIDATION.md  PROJECT_STATUS.md  PUBLISHING.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  app.py  auto_run.py  check_alternative_names.py  check_environment.py  check_pypi_names.py  check_structure.bat  check_structure.ps1  check_structure.sh  cleanup.ps1  cleanup.sh  demo_app.py  demo_simple.py  download_from_github.py  download_from_github_v2.py  find_available_name.py  fix_imports.py  generate_sample_data.py  install_dependencies.py  main.py  pyproject.toml  requirements.txt  requirements_updated.txt  start_dashboard.py  test_imports.py
COVID-19-Dashboard/.github/workflows/: tests.yml
COVID-19-Dashboard/.github_new/workflows/: test.yml
COVID-19-Dashboard/.streamlit/: config.toml
COVID-19-Dashboard/assets/: style.css
COVID-19-Dashboard/benchmarks/: performance_benchmarks.py
COVID-19-Dashboard/data/raw/: metadata.txt
COVID-19-Dashboard/data/sample/: covid_sample.csv
COVID-19-Dashboard/examples/: simple_example.py
COVID-19-Dashboard/examples/api_server/: README.md  main.py
COVID-19-Dashboard/examples/streamlit_dashboard/: README.md  app.py
COVID-19-Dashboard/examples_new/: simple_example.py
COVID-19-Dashboard/notebooks/: exploratory_analysis.ipynb
COVID-19-Dashboard/pages/: 01_🗺️_Carte_Mondiale.py  02_📊_Analyses_Avancées.py  03_📄_Rapports_PDF.py
COVID-19-Dashboard/scripts/: __init__.py  __init__.py.backup  create_mock_dataset.py  create_sample_dataset.py  data_cleaner.py  data_loader.py  data_utils.py  report_generator.py  test_execution.py  visualizations.py
COVID-19-Dashboard/scripts/data/raw/: metadata.txt
COVID-19-Dashboard/src/covid_analytics/: __init__.py
COVID-19-Dashboard/src/covid_analytics/analytics/: __init__.py  metrics.py  trends.py
COVID-19-Dashboard/src/covid_analytics/core/: __init__.py  config.py  exceptions.py  logging.py
COVID-19-Dashboard/src/covid_analytics/data/: __init__.py  loaders.py  schemas.py  sources.py
COVID-19-Dashboard/src/covid_analytics/processing/: __init__.py  cleaners.py  transformers.py
COVID-19-Dashboard/tests/: conftest.py
COVID-19-Dashboard/tests/integration/: __init__.py  test_end_to_end.py
COVID-19-Dashboard/tests/unit/: __init__.py  test_analytics_metrics.py  test_analytics_trends.py  test_config.py  test_data_cleaners.py  test_data_loaders.py  test_data_sources.py
COVID-19-Dashboard/tests_new/: test_data.py  test_metrics.py
COVID-19-Dashboard/utils/: file_handler.py
data/raw/: covid_data.csv  metadata.txt
